Pagination done for both admin smart meter page and admin provider page